Fix WorkTalk mobile conversation pane visibility

--- a/components/worktalk/WorkTalkApp.module.css
+++ b/components/worktalk/WorkTalkApp.module.css
@@ -2910,6 +2910,16 @@
     display: flex;
   }
 
+  .app:not(.popupApp) .roomPane.mobileHidden {
+    display: none;
+  }
+
+  .app:not(.popupApp) .conversationPane.mobileVisible {
+    display: flex;
+    width: 100%;
+    height: 100svh;
+  }
+
   .roomPaneHeader {
     padding-top: max(20px, env(safe-area-inset-top));
   }
@@ -2971,6 +2981,16 @@
 
   .app:not(.popupApp) .conversationPane {
     display: none;
+  }
+
+  .app:not(.popupApp) .roomPane.mobileHidden {
+    display: none;
+  }
+
+  .app:not(.popupApp) .conversationPane.mobileVisible {
+    display: flex;
+    width: 100%;
+    height: 100svh;
   }
 
   .popupApp {
